--- a/collabx-ready/index.html
+++ b/collabx-ready/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genosisx</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/landingproject.css">
-	<link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="landingproject.css">
+	<link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <nav id="navbar">
