--- a/collabx-ready/contactus.html
+++ b/collabx-ready/contactus.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genosisx | Contact Us</title>
-    <link rel="stylesheet" href="css/contactus.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="contactus.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <nav id="navbar">
