--- a/collabx-ready/sign in.html
+++ b/collabx-ready/sign in.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="p.css" />
-    <link rel="stylesheet" href="css/sign in.css">
+    <link rel="stylesheet" href="sign in.css">
     
     <title>Sign in & Sign up Form</title>
   </head>
