--- a/collabx-ready/aboutus1.html
+++ b/collabx-ready/aboutus1.html
@@ -61,37 +61,15 @@
         <div class="team-row">
             <div class="member">
                 <img src="" alt="">
-                <h2>payal</h2>
+                <h2>Bhumi Jain</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
             </div>
             <div class="member">
                 <img src="./img1.jpg" alt="">
-                <h2>team2</h2>
+                <h2>Prathik Shetty</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
             </div>
-            <div class="member">
-                <img src="./img1.jpg" alt="">
-                <h2>team2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
-            </div>
-        </div>
-
-        <div class="team-row">
-            <div class="member">
-                <img src="./img1.jpg" alt="">
-                <h2>team2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
-            </div>
-            <div class="member">
-                <img src="./img1.jpg" alt="">
-                <h2>team2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
-            </div>
-            <div class="member">
-                <img src="./img1.jpg" alt="">
-                <h2>team2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum similique eligendi numquam.</p>
-            </div>
+           
         </div>
         </div>
 
