--- a/collabx-ready/index.html
+++ b/collabx-ready/index.html
@@ -15,7 +15,7 @@
             <img src="https://i.postimg.cc/x8McQvf9/DART.png" alt="" srcset="">
         </div>
         <ul class="mid">
-            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="index.html">Home</a></li>
             <li class="item"><a href="#">Projects</a></li>
             <li class="item"><a href="#">Library</a></li>
             <li class="item"><a href="aboutus1.html">About Us</a></li>
